--- a/MyDapper/packages.config
+++ b/MyDapper/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="2.0.123" targetFramework="net461" />
+  <package id="Dapper.Contrib" version="2.0.78" targetFramework="net461" />
   <package id="Dapper.Transaction" version="2.0.35.2" targetFramework="net461" />
+  <package id="Z.Dapper.Plus" version="4.0.21" targetFramework="net461" />
 </packages>
